# discord_bot_hooks

./: .env.example  .gitignore  README.md  cgv_scapper.js  generate_gmail_token.py  pyproject.toml  requirements.txt  verify_deriv.py  verify_trading.py
.github/workflows/: cgv_notification.yml  coding_interview.yml  derivatives_analysis.yml  expense_notification.yml  financial_knowledge.yml  financial_news.yml  freelance_jobs.yml  gmail_notification.yml  health_check.yml  improvement_notification.yml  polymarket-analysis.yml  tech_interview.yml  tech_knowledge.yml  tech_news.yml  todo_notification.yml
data/: gold_history_cache.json  vnappmob_key.json
results/: polymarket_20260125_083949.json  polymarket_20260125_105501.json  polymarket_20260127_172238.json  polymarket_20260129_173156.json  polymarket_20260130_130746.json  polymarket_20260208_170632.json  polymarket_20260211_172150.json
src/: cgv_scraper.py  expense_report.py  gmail_reader.py
src/cgv_scraper/: main.py  requirements.txt
src/coding_interview/: pyproject.toml
src/coding_interview/coding_interview/: __main__.py  config.py  constants.py  content_generator.py  topic_selector.py
src/common/: ddg_client.py  pyproject.toml  requirements.txt  tavily_client.py
src/common/bot_common/: ddg_client.py  discord_utils.py  tavily_client.py  websearchapi_client.py  zai_client.py
src/derivatives/: config.py  data_aggregator.py  main.py  models.py  pyproject.toml  requirements.txt  research_analyzer.py
src/derivatives/clients/: vnstock_client.py
src/derivatives/derivatives_analyzer/: __init__.py  __main__.py
src/derivatives/derivatives_analyzer/clients/: __init__.py
src/expense_report/: main.py  pyproject.toml  requirements.txt
src/financial_knowledge/: pyproject.toml
src/financial_knowledge/financial_knowledge/: __main__.py  config.py  constants.py  content_generator.py  topic_selector.py
src/financial_news/: dsc_client.py  feed_manager.py  fmarket_client.py  main.py  market_enricher.py  news_enricher.py  notifier.py  pyproject.toml  requirements.txt  stock_client.py  summarizer.py
src/financial_news/financial_news/: __main__.py  fmarket_client.py  market_enricher.py  marketstack_client.py  mediastack_client.py  news_enricher.py  notifier.py  ssi_client.py  stock_client.py  summarizer.py
src/freelance_jobs/: pyproject.toml
src/freelance_jobs/freelance_jobs/: __main__.py  analysis.py  config.py  constants.py  job_finder.py  keyword_selector.py
src/gmail_reader/: discord_client.py  imap_client.py  main.py  pyproject.toml  requirements.txt  summarizer.py  test_utils.py
src/gmail_reader/gmail_reader/: __main__.py  config.py  summarizer.py  utils.py
src/health_check_bot/: pyproject.toml
src/health_check_bot/health_check_bot/: __main__.py
src/improvement_notifier/: pyproject.toml
src/improvement_notifier/improvement_notifier/: __init__.py  __main__.py  config.py  db.py  models.py  notifier.py
src/poly_market/: __init__.py  config.py  main.py  models.py  polymarket_client.py  pyproject.toml  research_analyzer.py  suggestion_engine.py
src/poly_market/polymarket_analyzer/: __main__.py  config.py  polymarket_client.py  research_analyzer.py  suggestion_engine.py
src/scripts/: generate_gmail_token.py
src/tech_interview/: pyproject.toml
src/tech_interview/tech_interview/: __main__.py  config.py  constants.py  content_generator.py  topic_selector.py
src/tech_knowledge/: pyproject.toml
src/tech_knowledge/tech_knowledge/: __main__.py  config.py  constants.py  content_generator.py  topic_selector.py
src/tech_news/: pyproject.toml
src/tech_news/tech_news/: __main__.py  config.py  constants.py  content_generator.py
src/todo_notifier/: main.py  pyproject.toml  requirements.txt
src/todo_notifier/todo_notifier/: __main__.py
tests/: test_coding_interview.py  test_discord_utils.py  test_freelance_job_finder.py  test_ssi_client.py  test_tech_interview_generator.py  test_tech_interview_splitting.py  test_topic_selectors.py
