[project]
name = "discord-bot-hooks-monorepo"
version = "0.1.0"
description = "Monorepo for Discord Bot Hooks"
requires-python = ">=3.11"
dependencies = [
  "bot-common",
  "expense-report",
  "financial-news",
  "gmail-reader",
  "polymarket-analyzer",
  "todo-notifier"
]

[tool.uv.workspace]
members = ["src/*"]

[tool.uv.sources]
bot-common = { workspace = true }
expense-report = { workspace = true }
financial-news = { workspace = true }
gmail-reader = { workspace = true }
polymarket-analyzer = { workspace = true }
todo-notifier = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
