[project]
name = "bot-common"
version = "0.1.0"
description = "Shared utilities for Discord Bot Hooks"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
