[project]
name = "expense-report"
version = "0.1.0"
description = "Expense Reporting Bot"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary",
    "bot-common",
]

[tool.uv.sources]
bot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
