[project]
name = "expense-report"
version = "0.1.0"
description = "Expense Reporting Bot"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary",
    "bot-common",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]

[tool.uv.sources]
bot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
