[project]
name = "financial-news"
version = "0.1.0"
description = "Financial News Aggregator"
requires-python = ">=3.11"
dependencies = [
    "feedparser",
    "beautifulsoup4",
    "bot-common",
]

[tool.uv.sources]
bot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
