[project]
name = "polymarket-analyzer"
version = "0.1.0"
description = "Polymarket Opportunity Analyzer"
requires-python = ">=3.11"
dependencies = [
    "ddgs",
    "bot-common",
]

[tool.uv.sources]
bot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
