[project]
name = "polymarket-analyzer"
version = "0.1.0"
description = "Polymarket Opportunity Analyzer"
requires-python = ">=3.11"
dependencies = [
    "bot-common",
    "json_repair>=0.12.0",
]

[tool.uv.sources]
bot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
